add default seeders database and configure users permissions (#4)
