# app/Models/Status.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Spatie\Multitenancy\Models\Concerns\UsesTenantConnection;
+
+class Status extends Model
+{
+    use HasFactory, UsesTenantConnection;
+
+    protected $table = 'status';
+}
